--- a/index.html
+++ b/index.html
@@ -281,11 +281,11 @@
                 especially on open-source software security, vulnerability discovery/analysis/exploitation/mitigation, Android security.
             </p-->
             <p style="font-size: 1.1rem;">
-                I aim to do relevant and reasonable system research. My research interests span all areas in system security especially on <i>widely-deployed and critical</i> targets, while currently focusing on <i>open-source software, kernels, Android/Web platforms</i>. 
+                I aim to do relevant and reasonable system research. My research interests span all areas in system security especially on <i>widely-deployed and critical</i> targets, while currently focusing on <i>open-source software, kernels, Android/Web platforms, firmware, LLM-based agents and ADS</i>. 
             </p>
             <p style="font-size: 1.1rem;">
                 My research covers a wide range of topics, including <i>vulnerability discovery/exploitation/mitigation, malware/attack detection, privacy protection</i>. 
-                To address these problems, we usually use multi-disciplined techniques such as <i>Program Analysis, Machine/Deep Learning, NLP</i>.
+                To address these problems, we usually use multi-disciplined techniques such as <i>Program Analysis, LLM, Machine/Deep Learning</i>.
             </p>
             <p style="font-size: 1rem;">
                 <b>To prospective students/post-doctors:</b> <i>If you are interested in our research, please feel free to reach out.</i>
@@ -313,6 +313,7 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[Oct, 2024] I will join the TPC of <a href="https://www2025.thewebconf.org/research-tracks">WWW 2025</a> (Security and privacy track). Welcome to submit!</li>
                     <li>[Sept, 2024] Two papers accepted by <a href="https://sp2025.ieee-security.org/">IEEE S&P 2025</a>. Congrats Fengyu & Yue! <br/>  
                     <li>[Aug, 2024] One paper accepted by <a href="https://www.ndss-symposium.org/ndss2025/">NDSS 2025</a>. Congrats Zhibo! <br/>  
                     <li>[Aug, 2024] One paper accepted by <a href="https://conf.researchr.org/home/ase-2024">ASE 2024 (Industry)</a>. Congrats Shiyan! <br/>  
@@ -412,6 +413,20 @@
             <div id="pub">
                 <ol>
                     <li>
+                        <div class="title">MOCGuard: Automatically Detecting Missing-Owner-Check Vulnerabilities in Java Web Applications. </div>
+                        <div class="author">Fengyu Liu, Youkun Shi, Yuan Zhang, Guangliang Yang, Enhao Li, Min Yang. </div>
+                        <div class="venue">In Proceedings of the 46th IEEE Symposium on Security and Privacy (S&P), San Francisco, CA, USA, May 12-15, 2025
+                            (coming soon)
+                        </div>
+                    </li>
+                    <li>
+                        <div class="title">EPScan: Automated Detection of Excessive RBAC Permissions in Kubernetes Applications. </div>
+                        <div class="author">Yue Gu, Xin Tan, Yuan Zhang, Siyan Gao, Min Yang. </div>
+                        <div class="venue">In Proceedings of the 46th IEEE Symposium on Security and Privacy (S&P), San Francisco, CA, USA, May 12-15, 2025
+                            (coming soon)
+                        </div>
+                    </li>
+                    <li>
                         <div class="title">Misdirection of Trust: Demystifying the Abuse of Dedicated URL Shortening Service. </div>
                         <div class="author">Zhibo Zhang, Lei Zhang, Zhangyue Zhang, Geng Hong, Yuan Zhang, Min Yang. </div>
                         <div class="venue">In Proceedings of the 32nd Network and Distributed System Security Symposium (NDSS), San Diego, CA, USA, Feb 23-28, 2025
@@ -422,15 +437,15 @@
                         <div class="title">Accurate and Efficient Recurring Vulnerability Detection for IoT Firmware. </div>
                         <div class="author">Haoyu Xiao, Yuan Zhang, Minghang Shen, Chaoyang Lin, Can Zhang, Shengli Liu, Min Yang. </div>
                         <div class="venue">In Proceedings of the 31st ACM Conference on Computer and Communications Security (CCS), Salt Lake City, USA, October 14-18, 2024. 
-                            <a href="./paper/frimrec-ccs24-full.pdf">[Full Version]</a>
-                            <a href="./paper/frimrec-ccs24.pdf">[Paper]</a>
+                            <a href="./paper/firmrec-ccs24-full.pdf">[Full Version]</a>
+                            <a href="./paper/firmrec-ccs24.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li>
                         <div class="title">Applying Fuzz Driver Generation to Native C/C++ Libraries of OEM Android Framework: Obstacles and Solutions. </div>
                         <div class="author">Shiyan Peng, Yuan Zhang, Jiarun Dai, Yue Gu, Zhuoxiang Shen, Jingcheng Liu, Lin Wang, Yong Chen, Yu Qin, Lei Ai, Xianfeng Lu, Min Yang. </div>
                         <div class="venue">In Proceedings of the 39th IEEE/ACM International Conference on Automated Software Engineering (ASE Industry Track), Sacramento, CA, USA, Oct 27-Nov 1, 2024
-                            (coming soon)
+                            <a href="./paper/fuzzgen++-ase24industry.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li>
@@ -770,7 +785,7 @@
                         <ul><li><i>Spring 2024, Spring 2023, Spring 2022, Spring 2021, Spring 2020, Spring 2019, Spring 2018</i></li></ul>
                     </li>
                     <li> System Security: Attacks & Defenses <i>(in School of Software)</i>
-                        <ul><li><i>Fall 2023, Fall 2022, Fall 2021, Fall 2020, Fall 2019, Fall 2018, Fall 2017, Fall 2016, </i></li></ul>
+                        <ul><li><i>Fall 2024, Fall 2023, Fall 2022, Fall 2021, Fall 2020, Fall 2019, Fall 2018, Fall 2017, Fall 2016, </i></li></ul>
                     </li>
                     <li> Compiler Principles <i>(in School of Software)</i>
                         <ul><li><i>Fall 2017</i></li></ul>
@@ -809,6 +824,7 @@
             </div>
             <div>Technical Program Committee:<br>
                 <ul>
+                    <li>the 34th International World Wide Web Conference (WWW 2025)</i>
                     <li>the 34th USENIX Security Symposium (USENIX Security 2025)</i>
                     <li>the 2025 USENIX Annual Technical Conference (USENIX ATC 2025)</i>
                     <li>the 31th ACM Conference on Computer and Communications Security (ACM CCS 2024)</i>
