--- a/index.html
+++ b/index.html
@@ -313,6 +313,7 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[Oct, 2024] I will join the TPC of <a href="https://www.sigsac.org/ccs/CCS2025/">ACM CCS 2025</a>. Welcome to submit!</li>
                     <li>[Oct, 2024] I will join the TPC of <a href="https://www2025.thewebconf.org/research-tracks">WWW 2025</a> (Security and privacy track). Welcome to submit!</li>
                     <li>[Sept, 2024] Two papers accepted by <a href="https://sp2025.ieee-security.org/">IEEE S&P 2025</a>. Congrats Fengyu & Yue! <br/>  
                     <li>[Aug, 2024] One paper accepted by <a href="https://www.ndss-symposium.org/ndss2025/">NDSS 2025</a>. Congrats Zhibo! <br/>  
@@ -824,10 +825,11 @@
             </div>
             <div>Technical Program Committee:<br>
                 <ul>
+                    <li>the 32nd ACM Conference on Computer and Communications Security (ACM CCS 2025)</i>
                     <li>the 34th International World Wide Web Conference (WWW 2025)</i>
                     <li>the 34th USENIX Security Symposium (USENIX Security 2025)</i>
                     <li>the 2025 USENIX Annual Technical Conference (USENIX ATC 2025)</i>
-                    <li>the 31th ACM Conference on Computer and Communications Security (ACM CCS 2024)</i>
+                    <li>the 31st ACM Conference on Computer and Communications Security (ACM CCS 2024)</i>
                     <li>the 33rd USENIX Security Symposium (USENIX Security 2024)</i>
                     <li>the 2024 Network and Distributed System Security Symposium (NDSS 2024)</i>
                     <li>the 14th ACM Conference on Data and Application Security and Privacy (CODASPY 2024)</i>
