--- a/index.html
+++ b/index.html
@@ -313,6 +313,7 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[Oct, 2024] I will join the TPC of <a href="https://www.codaspy.org/2025/cfp.html">ACM CODASPY 2025</a>. Welcome to submit!</li>
                     <li>[Oct, 2024] I will join the TPC of <a href="https://www.sigsac.org/ccs/CCS2025/">ACM CCS 2025</a>. Welcome to submit!</li>
                     <li>[Oct, 2024] I will join the TPC of <a href="https://www2025.thewebconf.org/research-tracks">WWW 2025</a> (Security and privacy track). Welcome to submit!</li>
                     <li>[Sept, 2024] Two papers accepted by <a href="https://sp2025.ieee-security.org/">IEEE S&P 2025</a>. Congrats Fengyu & Yue! <br/>  
@@ -417,21 +418,21 @@
                         <div class="title">MOCGuard: Automatically Detecting Missing-Owner-Check Vulnerabilities in Java Web Applications. </div>
                         <div class="author">Fengyu Liu, Youkun Shi, Yuan Zhang, Guangliang Yang, Enhao Li, Min Yang. </div>
                         <div class="venue">In Proceedings of the 46th IEEE Symposium on Security and Privacy (S&P), San Francisco, CA, USA, May 12-15, 2025
-                            (coming soon)
+                            <a href="./paper/mocguard-oakland25.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li>
                         <div class="title">EPScan: Automated Detection of Excessive RBAC Permissions in Kubernetes Applications. </div>
                         <div class="author">Yue Gu, Xin Tan, Yuan Zhang, Siyan Gao, Min Yang. </div>
                         <div class="venue">In Proceedings of the 46th IEEE Symposium on Security and Privacy (S&P), San Francisco, CA, USA, May 12-15, 2025
-                            (coming soon)
+                            <a href="./paper/epscan-oakland25.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li>
                         <div class="title">Misdirection of Trust: Demystifying the Abuse of Dedicated URL Shortening Service. </div>
                         <div class="author">Zhibo Zhang, Lei Zhang, Zhangyue Zhang, Geng Hong, Yuan Zhang, Min Yang. </div>
                         <div class="venue">In Proceedings of the 32nd Network and Distributed System Security Symposium (NDSS), San Diego, CA, USA, Feb 23-28, 2025
-                            (coming soon)
+                            <a href="./paper/DUSS-ndss25.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li>
@@ -825,6 +826,7 @@
             </div>
             <div>Technical Program Committee:<br>
                 <ul>
+                    <li>the 15th ACM Conference on Data and Application Security and Privacy (CODASPY 2025)</i>
                     <li>the 32nd ACM Conference on Computer and Communications Security (ACM CCS 2025)</i>
                     <li>the 34th International World Wide Web Conference (WWW 2025)</i>
                     <li>the 34th USENIX Security Symposium (USENIX Security 2025)</i>
