--- a/index.html
+++ b/index.html
@@ -237,9 +237,9 @@
                 }
             }
         }
-        window.onload= function(){
-            showPub('2025');
-        }
+        // window.onload= function(){
+        //     showPub('2025');
+        // }
     </script>
 <!-- <script type="text/javascript" id="clustrmaps" src="http://cdn.clustrmaps.com/map_v2.js?d=lplNOM8Srknxk2Rdb7zm-qrXmm8SrZkvyeNgEfmfZAU&cl=ffffff&w=a"></script>     -->
 <!-- <div class="banner">
@@ -443,13 +443,13 @@
 
             <hr size=2>
             <h3><a name="publications">Publications </a>
-                <a class="year" href="javascript:showPub('2025');">( 25 /</a>
+                <!-- <a class="year" href="javascript:showPub('2025');">( 25 /</a>
                 <a class="year" href="javascript:showPub('2024');">24 /</a>
                 <a class="year" href="javascript:showPub('2023');">23 /</a>
                 <a class="year" href="javascript:showPub('2022');">22 /</a>
                 <a class="year" href="javascript:showPub('2021');">21 /</a>
                 <a class="year" href="javascript:showPub('2020');">20 /</a>
-                <a class="year" href="javascript:showPub('');">all )</a>
+                <a class="year" href="javascript:showPub('');">all )</a> -->
             </h3>
             <div id="pub">
                 <ol>
