--- a/index.html
+++ b/index.html
@@ -342,6 +342,7 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[March, 2025] Two papers accepted by <a href="https://sp2025.ieee-security.org/">IEEE S&P 2025</a>. Congrats Fengyu & Haoyu! <br/>  
                     <li>[Jan, 2025] Four papers accepted by <a href="https://www.usenix.org/conference/usenixsecurity25/">USENIX Security 2025</a>. Congrats Zihan, Xinyou, Keke & Peng! <br/>  </li>
                     <li>[Jan, 2025] One paper accepted by <a href="https://www2025.thewebconf.org/">WWW 2025</a>. Congrats Wuyuao Mai! <br/>  </li>
                     <li>[Oct, 2024] I will join the TPC of <a href="https://www.codaspy.org/2025/cfp.html">ACM CODASPY 2025</a>. Welcome to submit!</li>
@@ -457,27 +458,41 @@
                         <div class="title">Effective Directed Fuzzing with Hierarchical Scheduling for Web Vulnerability Detection. </div>
                         <div class="author">Zihan Lin, Yuan Zhang, Jiarun Dai, Xinyou Huang, Bocheng Xiang, Guangliang Yang, Letian Yuan, Lei Zhang, Fengyu Liu, Tian Chen, Min Yang. </div>
                         <div class="venue">In Proceedings of the 34th USENIX Security Symposium (USENIX Security), Seattle, WA, USA, August 13-15, 2025
-                            (to appear).
+                            <a href="./paper/WDFuzz-security25.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li class="pub 2025">
                         <div class="title">Towards Automatic Detection and Exploitation of Java Web Application Vulnerabilities via Concolic Execution guided by Cross-thread Object Manipulation. </div>
                         <div class="author">Xinyou Huang, Lei Zhang, Yongheng Liu, Peng Deng, Yinzhi Cao, Yuan Zhang, Min Yang. </div>
                         <div class="venue">In Proceedings of the 34th USENIX Security Symposium (USENIX Security), Seattle, WA, USA, August 13-15, 2025
-                            (to appear).
+                            <a href="./paper/JAEX-security25.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li class="pub 2025">
                         <div class="title">Careless Retention and Management: Understanding and Detecting Data Retention Denial-of-Service Vulnerabilities in Java Web Containers. </div>
                         <div class="author">Keke Lian, Lei Zhang, Haoran Zhao, Yinzhi Cao, Yongheng Liu, Fute Sun, Yuan Zhang, Min Yang. </div>
                         <div class="venue">In Proceedings of the 34th USENIX Security Symposium (USENIX Security), Seattle, WA, USA, August 13-15, 2025
-                            (to appear).
+                            <a href="./paper/Dr.D-security25.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li class="pub 2025">
                         <div class="title">ChainFuzz: Exploiting Upstream Vulnerabilities in Open-Source Supply Chains. </div>
                         <div class="author">Peng Deng, Lei Zhang, Yuchuan Meng, Zhemin Yang, Yuan Zhang, Min Yang. </div>
                         <div class="venue">In Proceedings of the 34th USENIX Security Symposium (USENIX Security), Seattle, WA, USA, August 13-15, 2025
+                            <a href="./paper/chainfuzz-security25.pdf">[Paper]</a>
+                        </div>
+                    </li>
+                    <li class="pub 2025">
+                        <div class="title">HouseFuzz: Service-Aware Grey-Box Fuzzing for Vulnerability Detection in Linux-Based Firmware. </div>
+                        <div class="author">Haoyu Xiao, Ziqi Wei, Jiarun Dai, Bowen Li, Yuan Zhang, Min Yang. </div>
+                        <div class="venue">In Proceedings of the 46th IEEE Symposium on Security and Privacy (S&P), San Francisco, CA, USA, May 12-15, 2025
+                            (to appear).
+                        </div>
+                    </li>
+                    <li class="pub 2025">
+                        <div class="title">Detecting Taint-Style Vulnerabilities in Microservice-Structured Web Applications. </div>
+                        <div class="author">Fengyu Liu, Yuan Zhang, Tian Chen, Youkun Shi, Guangliang Yang, Zihan Lin Min Yang, Junyao He, Qi Li. </div>
+                        <div class="venue">In Proceedings of the 46th IEEE Symposium on Security and Privacy (S&P), San Francisco, CA, USA, May 12-15, 2025
                             (to appear).
                         </div>
                     </li>
@@ -499,7 +514,7 @@
                         <div class="title">You Can't Eat Your Cake and Have It Too: The Performance Degradation of LLMs with Jailbreak Defense. </div>
                         <div class="author">Wuyuao Mai, Geng Hong, Pei Chen, Xudong Pan, Baojun Liu, Yuan Zhang, Haixin Duan, Min Yang. </div>
                         <div class="venue">In Proceedings of the 34th ACM Web Conference (WWW), Sydney, Australia, April 28-May 2, 2025
-                            (to appear).
+                            <a href="./paper/LLMDegradation-www25.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li class="pub 2025">
