--- a/index.html
+++ b/index.html
@@ -342,6 +342,7 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[March, 2025] One paper accepted by <a href="https://www.sigsac.org/ccs/CCS2025/">ACM CCS 2025</a>. Congrats Fengyu! <br/>  </li>
                     <li>[March, 2025] Two papers accepted by <a href="https://sp2025.ieee-security.org/">IEEE S&P 2025</a>. Congrats Fengyu & Haoyu! <br/>  
                     <li>[Jan, 2025] Four papers accepted by <a href="https://www.usenix.org/conference/usenixsecurity25/">USENIX Security 2025</a>. Congrats Zihan, Xinyou, Keke & Peng! <br/>  </li>
                     <li>[Jan, 2025] One paper accepted by <a href="https://www2025.thewebconf.org/">WWW 2025</a>. Congrats Wuyuao Mai! <br/>  </li>
@@ -454,6 +455,13 @@
             </h3>
             <div id="pub">
                 <ol>
+                    <li class="pub 2025">
+                        <div class="title">BACScan: Automatic Black-Box Detection of Broken-Access-Control Vulnerabilities in Web Applications. </div>
+                        <div class="author">Fengyu Liu, Yuan Zhang, Enhao Li, Wei Meng, Youkun Shi, Qianheng Wang, Chenlin Wang, Zihan Lin, Min Yang. </div>
+                        <div class="venue">In Proceedings of the 32nd ACM Conference on Computer and Communications Security (CCS), Taipei, Taiwan, October 13-17, 2025
+                            (to appear).
+                        </div>
+                    </li>
                     <li class="pub 2025">
                         <div class="title">Effective Directed Fuzzing with Hierarchical Scheduling for Web Vulnerability Detection. </div>
                         <div class="author">Zihan Lin, Yuan Zhang, Jiarun Dai, Xinyou Huang, Bocheng Xiang, Guangliang Yang, Letian Yuan, Lei Zhang, Fengyu Liu, Tian Chen, Min Yang. </div>
