--- a/index.html
+++ b/index.html
@@ -342,6 +342,7 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[April, 2025] One paper accepted by <a href="https://conf.researchr.org/home/fse-2025/">FSE 2025</a>. Congrats Zhengmin! <br/>  </li>
                     <li>[March, 2025] One paper accepted by <a href="https://www.sigsac.org/ccs/CCS2025/">ACM CCS 2025</a>. Congrats Fengyu! <br/>  </li>
                     <li>[March, 2025] Two papers accepted by <a href="https://sp2025.ieee-security.org/">IEEE S&P 2025</a>. Congrats Fengyu & Haoyu! <br/>  
                     <li>[Jan, 2025] Four papers accepted by <a href="https://www.usenix.org/conference/usenixsecurity25/">USENIX Security 2025</a>. Congrats Zihan, Xinyou, Keke & Peng! <br/>  </li>
@@ -359,8 +360,8 @@
                     <li>[June, 2024] One paper accepted by <a href="https://conf.researchr.org/home/icsme-2024/">ICSME 2024</a>. Congrats Lin! <br/>  
                     <li>[May, 2024] One paper accepted by <a href="https://www.sigsac.org/ccs/CCS2024/">CCS 2024</a>. Congrats Haoyu! <br/>  
                     <li>[May, 2024] Invited to join the Editorial Board of <a href="https://cybersecurity.springeropen.com/">Cybersecurity.</a> Welcome to submit!</li>
-                    <li>[April, 2024] Invited to join the Editorial Board of <a href="https://mc.manuscriptcentral.com/tops">ACM Transactions on Security and Privacy (TOPS).</a> Welcome to submit!</li>
-                    <li>[April, 2024] One paper accepted by <a href="https://2024.esec-fse.org/track/fse-2024-industry">FSE 2024 (Industry)</a>. Congrats Kangzheng! <br/>  </li>
+                    <!-- <li>[April, 2024] Invited to join the Editorial Board of <a href="https://mc.manuscriptcentral.com/tops">ACM Transactions on Security and Privacy (TOPS).</a> Welcome to submit!</li>
+                    <li>[April, 2024] One paper accepted by <a href="https://2024.esec-fse.org/track/fse-2024-industry">FSE 2024 (Industry)</a>. Congrats Kangzheng! <br/>  </li> -->
                     <!-- <li>[Jan, 2024] Two papers accepted by <a href="https://www2024.thewebconf.org/">WWW 2024</a>. Congrats Guoyi & Youkun! <br/>  </li>
                     <li>[Jan, 2024] One paper accepted by <a href="https://conf.researchr.org/home/fse-2024">FSE 2024</a>. Congrats Keke! <br/>  </li>
                     <li>[Dec, 2023] I will join the TPC of <a href="https://www.sigsac.org/ccs/CCS2024/home.html">ACM CCS 2024</a>. Welcome to submit!</li>
@@ -488,6 +489,13 @@
                         <div class="author">Peng Deng, Lei Zhang, Yuchuan Meng, Zhemin Yang, Yuan Zhang, Min Yang. </div>
                         <div class="venue">In Proceedings of the 34th USENIX Security Symposium (USENIX Security), Seattle, WA, USA, August 13-15, 2025
                             <a href="./paper/chainfuzz-security25.pdf">[Paper]</a>
+                        </div>
+                    </li>
+                    <li class="pub 2025">
+                        <div class="title">CXXCrafter: An LLM-Based Agent for Automated C/C++ Open Source Software Building. </div>
+                        <div class="author">Zhengmin Yu, Yuan Zhang, Ming Wen, Yinan Nie, Wenhui Zhang, Min Yang. </div>
+                        <div class="venue">In Proceedings of ACM International Conference on the Foundations of Software Engineering (FSE), Trondheim, Norway, June 23-27 2025
+                            (to appear).
                         </div>
                     </li>
                     <li class="pub 2025">
