--- a/index.html
+++ b/index.html
@@ -342,6 +342,7 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[May, 2025] Our vulnerability detection work on microservice-structured web apps received <span class="award">Distinguished Paper Award</span> at <a href="https://sp2025.ieee-security.org/">IEEE S&P 2025</a>! <br/> 
                     <li>[April, 2025] One paper accepted by <a href="https://conf.researchr.org/home/fse-2025/">FSE 2025</a>. Congrats Zhengmin! <br/>  </li>
                     <li>[March, 2025] One paper accepted by <a href="https://www.sigsac.org/ccs/CCS2025/">ACM CCS 2025</a>. Congrats Fengyu! <br/>  </li>
                     <li>[March, 2025] Two papers accepted by <a href="https://sp2025.ieee-security.org/">IEEE S&P 2025</a>. Congrats Fengyu & Haoyu! <br/>  
@@ -358,8 +359,8 @@
                     <li>[July, 2024] One paper accepted by <a href="https://2024.issta.org/">ISSTA 2024</a>. Congrats Zhongrui! <br/>  
                     <li>[June, 2024] Our FSE paper on Android Component Security received the <span class="award">ACM SIGSOFT Distinguished Paper Award</span>!</a> Congrats Keke! <br/>  
                     <li>[June, 2024] One paper accepted by <a href="https://conf.researchr.org/home/icsme-2024/">ICSME 2024</a>. Congrats Lin! <br/>  
-                    <li>[May, 2024] One paper accepted by <a href="https://www.sigsac.org/ccs/CCS2024/">CCS 2024</a>. Congrats Haoyu! <br/>  
-                    <li>[May, 2024] Invited to join the Editorial Board of <a href="https://cybersecurity.springeropen.com/">Cybersecurity.</a> Welcome to submit!</li>
+                    <!-- <li>[May, 2024] One paper accepted by <a href="https://www.sigsac.org/ccs/CCS2024/">CCS 2024</a>. Congrats Haoyu! <br/>  
+                    <li>[May, 2024] Invited to join the Editorial Board of <a href="https://cybersecurity.springeropen.com/">Cybersecurity.</a> Welcome to submit!</li> -->
                     <!-- <li>[April, 2024] Invited to join the Editorial Board of <a href="https://mc.manuscriptcentral.com/tops">ACM Transactions on Security and Privacy (TOPS).</a> Welcome to submit!</li>
                     <li>[April, 2024] One paper accepted by <a href="https://2024.esec-fse.org/track/fse-2024-industry">FSE 2024 (Industry)</a>. Congrats Kangzheng! <br/>  </li> -->
                     <!-- <li>[Jan, 2024] Two papers accepted by <a href="https://www2024.thewebconf.org/">WWW 2024</a>. Congrats Guoyi & Youkun! <br/>  </li>
@@ -502,14 +503,14 @@
                         <div class="title">HouseFuzz: Service-Aware Grey-Box Fuzzing for Vulnerability Detection in Linux-Based Firmware. </div>
                         <div class="author">Haoyu Xiao, Ziqi Wei, Jiarun Dai, Bowen Li, Yuan Zhang, Min Yang. </div>
                         <div class="venue">In Proceedings of the 46th IEEE Symposium on Security and Privacy (S&P), San Francisco, CA, USA, May 12-15, 2025
-                            (to appear).
+                            <a href="./paper/housefuzz-oakland25.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li class="pub 2025">
                         <div class="title">Detecting Taint-Style Vulnerabilities in Microservice-Structured Web Applications. </div>
                         <div class="author">Fengyu Liu, Yuan Zhang, Tian Chen, Youkun Shi, Guangliang Yang, Zihan Lin Min Yang, Junyao He, Qi Li. </div>
-                        <div class="venue">In Proceedings of the 46th IEEE Symposium on Security and Privacy (S&P), San Francisco, CA, USA, May 12-15, 2025
-                            (to appear).
+                        <div class="venue">In Proceedings of the 46th IEEE Symposium on Security and Privacy (S&P), San Francisco, CA, USA, May 12-15, 2025 <b class="award">[Distinguished Paper Award]</b>
+                            <a href="./paper/mscan-oakland25.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li class="pub 2025">
@@ -931,6 +932,8 @@
             </div>
             <div>Technical Program Committee:<br>
                 <ul>
+                    <li>the 35th USENIX Security Symposium (USENIX Security 2026)</i>
+                    <li>the 30th European Symposium on Research in Computer Security (ESORICS 2025)</i>
                     <li>the 15th ACM Conference on Data and Application Security and Privacy (CODASPY 2025)</i>
                     <li>the 32nd ACM Conference on Computer and Communications Security (ACM CCS 2025)</i>
                     <li>the 34th International World Wide Web Conference (WWW 2025)</i>
