--- a/index.html
+++ b/index.html
@@ -342,6 +342,8 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[June, 2025] Three papers accepted by <a href="https://www.usenix.org/conference/usenixsecurity25/">USENIX Security 2025</a>. Congrats Youkun, Bocheng & Fengyu! <br/>  </li>
+                    <li>[May, 2025] One paper accepted by <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=10206">IEEE TIFS</a>. Congrats Lin! <br/>  </li>
                     <li>[May, 2025] Our vulnerability detection work on microservice-structured web apps received <span class="award">Distinguished Paper Award</span> at <a href="https://sp2025.ieee-security.org/">IEEE S&P 2025</a>! <br/> 
                     <li>[April, 2025] One paper accepted by <a href="https://conf.researchr.org/home/fse-2025/">FSE 2025</a>. Congrats Zhengmin! <br/>  </li>
                     <li>[March, 2025] One paper accepted by <a href="https://www.sigsac.org/ccs/CCS2025/">ACM CCS 2025</a>. Congrats Fengyu! <br/>  </li>
@@ -357,8 +359,8 @@
                     <li>[July, 2024] Invited to join the TPC of <a href="https://www.usenix.org/conference/atc25/call-for-papers">USENIX ATC 2025</a>. Welcome to submit!</li>
                     <li>[July, 2024] Invited to join the TPC of <a href="https://www.usenix.org/conference/usenixsecurity25/call-for-papers">USENIX Security 2025</a>. Welcome to submit!</li>
                     <li>[July, 2024] One paper accepted by <a href="https://2024.issta.org/">ISSTA 2024</a>. Congrats Zhongrui! <br/>  
-                    <li>[June, 2024] Our FSE paper on Android Component Security received the <span class="award">ACM SIGSOFT Distinguished Paper Award</span>!</a> Congrats Keke! <br/>  
-                    <li>[June, 2024] One paper accepted by <a href="https://conf.researchr.org/home/icsme-2024/">ICSME 2024</a>. Congrats Lin! <br/>  
+                    <!-- <li>[June, 2024] Our FSE paper on Android Component Security received the <span class="award">ACM SIGSOFT Distinguished Paper Award</span>!</a> Congrats Keke! <br/>  
+                    <li>[June, 2024] One paper accepted by <a href="https://conf.researchr.org/home/icsme-2024/">ICSME 2024</a>. Congrats Lin! <br/>   -->
                     <!-- <li>[May, 2024] One paper accepted by <a href="https://www.sigsac.org/ccs/CCS2024/">CCS 2024</a>. Congrats Haoyu! <br/>  
                     <li>[May, 2024] Invited to join the Editorial Board of <a href="https://cybersecurity.springeropen.com/">Cybersecurity.</a> Welcome to submit!</li> -->
                     <!-- <li>[April, 2024] Invited to join the Editorial Board of <a href="https://mc.manuscriptcentral.com/tops">ACM Transactions on Security and Privacy (TOPS).</a> Welcome to submit!</li>
@@ -465,6 +467,27 @@
                         </div>
                     </li>
                     <li class="pub 2025">
+                        <div class="title">Make Agent Defeat Agent: Automatic Detection of Taint-Style Vulnerabilities in LLM-based Agents. </div>
+                        <div class="author">Fengyu Liu, Yuan Zhang, Jiaqi Luo, Jiarun Dai, Tian Chen, Letian Yuan, Zhengmin Yu, Youkun Shi, Ke Li, Chengyuan Zhou, Hao Chen, Min Yang. </div>
+                        <div class="venue">In Proceedings of the 34th USENIX Security Symposium (USENIX Security), Seattle, WA, USA, August 13-15, 2025
+                            (to appear).
+                        </div>
+                    </li>
+                    <li class="pub 2025">
+                        <div class="title">XSSky: Detecting XSS Vulnerabilities through Local Path-Persistent Fuzzing. </div>
+                        <div class="author">Youkun Shi, Yuan Zhang, Tianhao Bai, Feng Xue, Jiarun Dai, Fengyu Liu, Lei Zhang, Xiapu Luo, Min Yang. </div>
+                        <div class="venue">In Proceedings of the 34th USENIX Security Symposium (USENIX Security), Seattle, WA, USA, August 13-15, 2025
+                            (to appear).
+                        </div>
+                    </li>
+                    <li class="pub 2025">
+                        <div class="title">Pig in a Poke: Automatically Detecting and Exploiting Link Following Vulnerabilities in Windows File Operations. </div>
+                        <div class="author">Bocheng Xiang, Yuan Zhang, Fengyu Liu, Hao Huang, Zihan Lin, Min Yang. </div>
+                        <div class="venue">In Proceedings of the 34th USENIX Security Symposium (USENIX Security), Seattle, WA, USA, August 13-15, 2025
+                            (to appear).
+                        </div>
+                    </li>
+                    <li class="pub 2025">
                         <div class="title">Effective Directed Fuzzing with Hierarchical Scheduling for Web Vulnerability Detection. </div>
                         <div class="author">Zihan Lin, Yuan Zhang, Jiarun Dai, Xinyou Huang, Bocheng Xiang, Guangliang Yang, Letian Yuan, Lei Zhang, Fengyu Liu, Tian Chen, Min Yang. </div>
                         <div class="venue">In Proceedings of the 34th USENIX Security Symposium (USENIX Security), Seattle, WA, USA, August 13-15, 2025
@@ -539,6 +562,13 @@
                         <div class="author">Zhibo Zhang, Lei Zhang, Zhangyue Zhang, Geng Hong, Yuan Zhang, Min Yang. </div>
                         <div class="venue">In Proceedings of the 32nd Network and Distributed System Security Symposium (NDSS), San Diego, CA, USA, Feb 23-28, 2025
                             <a href="./paper/DUSS-ndss25.pdf">[Paper]</a>
+                        </div>
+                    </li>
+                    <li class="pub 2025">
+                        <div class="title">Locating Security Patch Variants with Two-Dimensional Code Commit Features.</div>
+                        <div class="author">Lin Wang, Yuan Zhang, Xiaoting Chen, Min Yang.</div>
+                        <div class="venue">In IEEE Transactions on Information Forensics and Security (TIFS), 2025.
+                           (to appear).
                         </div>
                     </li>
                     <li class="pub 2024">
