--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
                         <div class="title">CXXCrafter: An LLM-Based Agent for Automated C/C++ Open Source Software Building. </div>
                         <div class="author">Zhengmin Yu, Yuan Zhang, Ming Wen, Yinan Nie, Wenhui Zhang, Min Yang. </div>
                         <div class="venue">In Proceedings of ACM International Conference on the Foundations of Software Engineering (FSE), Trondheim, Norway, June 23-27 2025
-                            (to appear).
+                            <a href="./paper/cxxcrafter-fse25.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li class="pub 2025">
