--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
                     <li class="pub 2025">
                         <div class="title">BACScan: Automatic Black-Box Detection of Broken-Access-Control Vulnerabilities in Web Applications. </div>
                         <div class="author">Fengyu Liu, Yuan Zhang, Enhao Li, Wei Meng, Youkun Shi, Qianheng Wang, Chenlin Wang, Zihan Lin, Min Yang. </div>
-                        <div class="venue">In Proceedings of the 32nd ACM Conference on Computer and Communications Security (CCS), Taipei, Taiwan, October 13-17, 2025
+                        <div class="venue">In Proceedings of the 32nd ACM Conference on Computer and Communications Security (CCS), Taipei, Taiwan, China, October 13-17, 2025
                             (to appear).
                         </div>
                     </li>
@@ -531,7 +531,7 @@
                     </li>
                     <li class="pub 2025">
                         <div class="title">Detecting Taint-Style Vulnerabilities in Microservice-Structured Web Applications. </div>
-                        <div class="author">Fengyu Liu, Yuan Zhang, Tian Chen, Youkun Shi, Guangliang Yang, Zihan Lin Min Yang, Junyao He, Qi Li. </div>
+                        <div class="author">Fengyu Liu, Yuan Zhang, Tian Chen, Youkun Shi, Guangliang Yang, Zihan Lin, Min Yang, Junyao He, Qi Li. </div>
                         <div class="venue">In Proceedings of the 46th IEEE Symposium on Security and Privacy (S&P), San Francisco, CA, USA, May 12-15, 2025 <b class="award">[Distinguished Paper Award]</b>
                             <a href="./paper/mscan-oakland25.pdf">[Paper]</a>
                         </div>
