--- a/index.html
+++ b/index.html
@@ -342,6 +342,7 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[July, 2025] One paper accepted by <a href="https://www.ndss-symposium.org/ndss2026/">NDSS 2026</a>. Congrats Runhao! <br/>  
                     <li>[June, 2025] Three papers accepted by <a href="https://www.usenix.org/conference/usenixsecurity25/">USENIX Security 2025</a>. Congrats Youkun, Bocheng & Fengyu! <br/>  </li>
                     <li>[May, 2025] One paper accepted by <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=10206">IEEE TIFS</a>. Congrats Lin! <br/>  </li>
                     <li>[May, 2025] Our vulnerability detection work on microservice-structured web apps received <span class="award">Distinguished Paper Award</span> at <a href="https://sp2025.ieee-security.org/">IEEE S&P 2025</a>! <br/> 
@@ -356,9 +357,9 @@
                     <li>[Sept, 2024] Two papers accepted by <a href="https://sp2025.ieee-security.org/">IEEE S&P 2025</a>. Congrats Fengyu & Yue! <br/>  
                     <li>[Aug, 2024] One paper accepted by <a href="https://www.ndss-symposium.org/ndss2025/">NDSS 2025</a>. Congrats Zhibo! <br/>  
                     <li>[Aug, 2024] One paper accepted by <a href="https://conf.researchr.org/home/ase-2024">ASE 2024 (Industry)</a>. Congrats Shiyan! <br/>  
-                    <li>[July, 2024] Invited to join the TPC of <a href="https://www.usenix.org/conference/atc25/call-for-papers">USENIX ATC 2025</a>. Welcome to submit!</li>
+                    <!-- <li>[July, 2024] Invited to join the TPC of <a href="https://www.usenix.org/conference/atc25/call-for-papers">USENIX ATC 2025</a>. Welcome to submit!</li>
                     <li>[July, 2024] Invited to join the TPC of <a href="https://www.usenix.org/conference/usenixsecurity25/call-for-papers">USENIX Security 2025</a>. Welcome to submit!</li>
-                    <li>[July, 2024] One paper accepted by <a href="https://2024.issta.org/">ISSTA 2024</a>. Congrats Zhongrui! <br/>  
+                    <li>[July, 2024] One paper accepted by <a href="https://2024.issta.org/">ISSTA 2024</a>. Congrats Zhongrui! <br/>   -->
                     <!-- <li>[June, 2024] Our FSE paper on Android Component Security received the <span class="award">ACM SIGSOFT Distinguished Paper Award</span>!</a> Congrats Keke! <br/>  
                     <li>[June, 2024] One paper accepted by <a href="https://conf.researchr.org/home/icsme-2024/">ICSME 2024</a>. Congrats Lin! <br/>   -->
                     <!-- <li>[May, 2024] One paper accepted by <a href="https://www.sigsac.org/ccs/CCS2024/">CCS 2024</a>. Congrats Haoyu! <br/>  
@@ -459,6 +460,13 @@
             </h3>
             <div id="pub">
                 <ol>
+                    <li class="pub 2026">
+                        <div class="title">FirmCross: Detecting Taint-style Vulnerabilities in Modern C-Lua Hybrid Web Services of Linux-based Firmware. </div>
+                        <div class="author">Runhao Liu, Jiarun Dai, Haoyu Xiao, Yuan Zhang, Yeqi Mou, Lukai Xu, Bo Yu, Baosheng Wang, Min Yang. </div>
+                        <div class="venue">In Proceedings of the 33rd Network and Distributed System Security Symposium (NDSS), San Diego, CA, USA, 23-27 Feb, 2026
+                            (to appear).
+                        </div>
+                    </li>
                     <li class="pub 2025">
                         <div class="title">BACScan: Automatic Black-Box Detection of Broken-Access-Control Vulnerabilities in Web Applications. </div>
                         <div class="author">Fengyu Liu, Yuan Zhang, Enhao Li, Wei Meng, Youkun Shi, Qianheng Wang, Chenlin Wang, Zihan Lin, Min Yang. </div>
@@ -963,6 +971,7 @@
             <div>Technical Program Committee:<br>
                 <ul>
                     <li>the 35th USENIX Security Symposium (USENIX Security 2026)</i>
+                    <li>the 21st International Conference on Information Security and Cryptology (Inscrypt 2025)</i>
                     <li>the 30th European Symposium on Research in Computer Security (ESORICS 2025)</i>
                     <li>the 15th ACM Conference on Data and Application Security and Privacy (CODASPY 2025)</i>
                     <li>the 32nd ACM Conference on Computer and Communications Security (ACM CCS 2025)</i>
